--- a/index.html
+++ b/index.html
@@ -18,48 +18,50 @@
                     <a href="index.html" class="navbar-logo">
                         AlLax
                     </a>
-                    <button class="navbar-toggler">
-                        <!-- <i class="hamburger" id="hamburger"> -->
-                        <i class="fa fa-bars" aria-hidden="true">
-                            <span class="line"></span>
-                            <span class="line"></span>
-                            <span class="line"></span>
-                            <span class="line"></span>
-                        </i>
-                    </button>
-                    <div class="navbar-collapse" >
-                        <ul class="navbar-nav">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="#">
-                                    Home
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="index-hero-1.html">Home 1</a>
-                                    <a class="dropdown-item" href="index-hero-2.html">Home 2</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#service">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#price">Pricing Plans</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#testimonial">Testimonials</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#blog">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link btn px-3 mx-3" href="#appointment">Appointment</a>
-                            </li>
-                        </ul>
+                    <div class="navbar-droppdown">
+                        <button class="navbar-toggler">
+                            <!-- <i class="hamburger" id="hamburger"> -->
+                            <i class="fa fa-bars" aria-hidden="true">
+                                <span class="line"></span>
+                                <span class="line"></span>
+                                <span class="line"></span>
+                                <span class="line"></span>
+                            </i>
+                        </button>
+                        <div class="navbar-collapse open" >
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="#">
+                                        Home
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="index-hero-1.html">Home 1</a>
+                                        <a class="dropdown-item" href="index-hero-2.html">Home 2</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#about">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#service">Services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#price">Pricing Plans</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#testimonial">Testimonials</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#blog">Blog</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#contact">Contact</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link btn px-3 mx-3" href="#appointment">Appointment</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                 </div>
